Удалена таблица из страницы

--- a/public/tipy_udarnogo_sloga/index.html
+++ b/public/tipy_udarnogo_sloga/index.html
@@ -85,63 +85,7 @@
 например: bar, bark.</p>
 <h4 id="четвертый-тип-слога">Четвертый тип слога.</h4>
 <p>Сочетания типа гласная + r + гласная объединяются в четвертый тип
-слога. Например:</p>
-<table>
-  <thead>
-      <tr>
-          <th>Тип слога</th>
-          <th>Описание</th>
-          <th>Буква A</th>
-          <th>Буква E</th>
-          <th>Буква I</th>
-          <th>Буква O</th>
-          <th>Буква U</th>
-          <th>Буква Y</th>
-      </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <td>Открытый</td>
-          <td>Слог оканчивается на гласную</td>
-          <td>/eɪ/ (cake)</td>
-          <td>/iː/ (he)</td>
-          <td>/aɪ/ (like)</td>
-          <td>/oʊ/ (go)</td>
-          <td>/juː/ (use)</td>
-          <td>/aɪ/ (my)</td>
-      </tr>
-      <tr>
-          <td>Закрытый</td>
-          <td>Слог оканчивается на согласную</td>
-          <td>/æ/ (cat)</td>
-          <td>/e/ (bed)</td>
-          <td>/ɪ/ (sit)</td>
-          <td>/ɒ/ (hot)</td>
-          <td>/ʌ/ (cup)</td>
-          <td>/ɪ/ (gym)</td>
-      </tr>
-      <tr>
-          <td>Слог с &ldquo;e&rdquo;</td>
-          <td>Слог оканчивается на &ldquo;e&rdquo; (немая)</td>
-          <td>/eɪ/ (name)</td>
-          <td>/iː/ (scene)</td>
-          <td>/aɪ/ (time)</td>
-          <td>/oʊ/ (home)</td>
-          <td>/juː/ (tune)</td>
-          <td>/aɪ/ (type)</td>
-      </tr>
-      <tr>
-          <td>R-слог</td>
-          <td>Слог оканчивается на &ldquo;r&rdquo; или &ldquo;r + согласная&rdquo;</td>
-          <td>/ɑː/ (car)</td>
-          <td>/ɜː/ (her)</td>
-          <td>/ɜː/ (bird)</td>
-          <td>/ɔː/ (for)</td>
-          <td>/ɜː/ (fur)</td>
-          <td>/ɜː/ (myrtle)</td>
-      </tr>
-  </tbody>
-</table>
+слога.</p>
 <h4 id="интонация-и-ритм-английской-речи">Интонация и ритм английской речи.</h4>
 <p>Для ритма английской речи характерно то, что ударные слоги в
 предложении произносятся через более или менее равные промежутки
