Пройдены первые занятия по иностранным языкам

--- a/public/cumleler_turkey/index.html
+++ b/public/cumleler_turkey/index.html
@@ -47,6 +47,11 @@
 
         <div><h3 id="türkçe-cümleler">Türkçe cümleler</h3>
 <p>Her gün eklediğim çeviri ile Türkiye&rsquo;de benim için yeni cümlelerin listesi</p>
+<p>1 - Nasılsın? (Насылсын?) - Как дела?</p>
+<p>2 - Adınız ne?&quot; (Адыныз не?) - Как тебя зовут?</p>
+<p>3 - Benim adım El&rsquo;ham. (Беним адым Ильхам) — Меня зовут Ильхам</p>
+<p>4 - Nasıl hissediyorsunuz? (Насыл хисседиёрсунуз?) - Как настроение?</p>
+<p>5 - Harika! (Харика!) — &ldquo;Отлично!</p>
 </div>
     </div>
    </div>
