--- a/public/english_words/index.html
+++ b/public/english_words/index.html
@@ -47,6 +47,37 @@
 
         <div><h3 id="words-in-english">Words in English</h3>
 <p>List of new words for me in English with translation, which I add to every day</p>
+<p>1 - Hello! - Привет! [ Хэллоу ]</p>
+<p>2 - Hi - Привет! [ Хай ]</p>
+<p>3 - Hey - Привет! [ Хей ]</p>
+<h3 id="fruits">Fruits</h3>
+<p>1 - Banana - Банан 🍌</p>
+<p>2 - Orange - Апельсин 🍊</p>
+<p>3 - Apple - Яблоко 🍎</p>
+<p>4 - Cucumber - Огурец 🥒</p>
+<p>5 - Сarrot - Марковка 🥕</p>
+<h3 id="colors">Colors</h3>
+<h3 id="numbers">Numbers</h3>
+<p>1 - One – [wʌn]</p>
+<p>2 - Two – [tuː]</p>
+<p>3 - Three – [θriː]</p>
+<p>4 - Four – [fɔːr]</p>
+<p>5 - Five – [faɪv]</p>
+<p>6 - Six – [sɪks]</p>
+<p>7 - Seven – [ˈsev.ən]</p>
+<p>8 - Eight – [eɪt]</p>
+<p>9 - Nine – [naɪn]</p>
+<p>10 - Ten – [ten]</p>
+<p>11 - Eleven – [ɪˈlev.ən]</p>
+<p>12 - Twelve – [twelv]</p>
+<p>13 - Thirteen – [ˌθɜːrˈtiːn]</p>
+<p>14 - Fourteen – [ˌfɔːrˈtiːn]</p>
+<p>15 - Fifteen – [ˌfɪfˈtiːn]</p>
+<p>16 - Sixteen – [ˌsɪkˈstiːn]</p>
+<p>17 - Seventeen – [ˌsev.ənˈtiːn]</p>
+<p>18 - Eighteen – [ˌeɪˈtiːn]</p>
+<p>19 - Nineteen – [ˌnaɪnˈtiːn]</p>
+<p>20 - Twenty – [ˈtwen.ti]</p>
 </div>
     </div>
    </div>
