--- a/public/espanol_frases/index.html
+++ b/public/espanol_frases/index.html
@@ -47,6 +47,12 @@
 
         <div><h3 id="frases-en-español">Frases en español</h3>
 <p>Lista de frases nuevas para mí en español con traducción, que agrego a diario</p>
+<p>1 - ¿Cómo estás? (Комо эстас?) - Как дела?</p>
+<p>2 - ¿Cómo está usted? (Комо эста устед?) - Как поживаете?</p>
+<p>3 - ¡Buenas tardes! (Буэнас тардес!) - Добрый день</p>
+<p>4 - ¡Buenos días! (Буэнос диас!) - Доброе утро</p>
+<p>5 - ¿Cómo te sientes? (Комо те сьентес?) - Как ты себя чувствуешь?</p>
+<p>6 - ¿Cómo te va? (Комо те ва?) - Как поживаешь?</p>
 </div>
     </div>
    </div>
