--- a/public/espanol_palabras/index.html
+++ b/public/espanol_palabras/index.html
@@ -47,6 +47,38 @@
 
         <div><h3 id="palabras-en-español">Palabras en español</h3>
 <p>Lista de palabras nuevas para mí en español con traducción, que agrego a diario</p>
+<p>1 - ¡Hola! (Ола!) - Привет</p>
+<p>2 - ¡Gracias! (Грасиас!) - Спасибо</p>
+<p>3 - ¡Por favor! (Пор фавор!) - Пожалуйста</p>
+<p>4 - De nada (Де нада) - Не за что</p>
+<p>5 - No es nada (Но эс нада) — Это пустяки</p>
+<h3 id="frutas">Frutas</h3>
+<p>1 - Manzana (Мансана) — Яблоко 🍎</p>
+<p>2 - Plátano (Платано) — Банан 🍌</p>
+<p>3 - Naranja (Наранха) — Апельсин 🍊</p>
+<p>4 - Fresa (Фреса) — Клубника 🍓</p>
+<p>5 - Uva (Ува) — Виноград 🍇</p>
+<h3 id="números">Números</h3>
+<p>1 - Uno (Уно)</p>
+<p>2 - Dos (Дос)</p>
+<p>3 - Tres (Трес)</p>
+<p>4 - Cuatro (Куатро)</p>
+<p>5 - Cinco (Синко)</p>
+<p>6 - Seis (Сейс)</p>
+<p>7 - Siete (Сьете)</p>
+<p>8 - Ocho (Очо)</p>
+<p>9 - Nueve (Нуэве)</p>
+<p>10 - Diez (Дьес)</p>
+<p>11 - Once (Онсе)</p>
+<p>12 - Doce (Досе)</p>
+<p>13 - Trece (Трессе)</p>
+<p>14 - Catorce (Каторсе)</p>
+<p>15 - Quince (Кинсе)</p>
+<p>16 - Dieciséis (Дьесисейс)</p>
+<p>17 - Diecisiete (Дьесисьете)</p>
+<p>18 - Dieciocho (Дьесиочо)</p>
+<p>19 - Diecinueve (Дьесинуэве)</p>
+<p>20 - Veinte (Вейнте)</p>
 </div>
     </div>
    </div>
