--- a/public/france_mots/index.html
+++ b/public/france_mots/index.html
@@ -47,6 +47,28 @@
 
         <div><h3 id="mots-en-français">Mots en Français</h3>
 <p>Liste de mots nouveaux pour moi en français avec traduction, que j&rsquo;ajoute chaque jour</p>
+<p>1 - Salut (салю) – Привет</p>
+<p>2 - Bonjour (бонжур) – Здравствуйте</p>
+<p>3 - Merci (мерси) – Спасибо!</p>
+<p>4 - S&rsquo;il vous plaît (силь ву плэ) – Пожалуйста</p>
+<p>5 - De rien (дё рьен) – Не за что</p>
+<h3 id="fruits">Fruits</h3>
+<p>1 - Pomme (пом) – Яблоко 🍎</p>
+<p>2 - Banane (банан) – Банан 🍌</p>
+<p>3 - Orange (оранж) – Апельсин 🍊</p>
+<p>4 - Fraise (фрэз) – Клубника 🍓</p>
+<p>5 - Raisin (резэн) – Виноград 🍇</p>
+<h3 id="nombres">Nombres</h3>
+<p>1 - Un (ан)</p>
+<p>2 - Deux (дё)</p>
+<p>3 - Trois (труа)</p>
+<p>4 - Quatre (катр)</p>
+<p>5 - Cinq (сэнк)</p>
+<p>6 - Six (сис)</p>
+<p>7 - Sept (сет)</p>
+<p>8 - Huit (юит)</p>
+<p>9 - Neuf (нёф)</p>
+<p>10 - Dix (дис)</p>
 </div>
     </div>
    </div>
