--- a/public/france_phrases/index.html
+++ b/public/france_phrases/index.html
@@ -47,6 +47,12 @@
 
         <div><h3 id="phrases-en-français">Phrases en Français</h3>
 <p>Liste de phrases nouveaux pour moi en français avec traduction, que j&rsquo;ajoute chaque jour</p>
+<p>1 - Comment allez-vous? (коман тале-ву) – Как у вас дела?</p>
+<p>2 - Comment ça va? (коман са ва) – Как дела?</p>
+<p>3 - Ça va bien (са ва бьен) – Дела идут хорошо</p>
+<p>4 - Comme ci, comme ça (ком си, ком са) – Так себе</p>
+<p>5 - Comment tu t&rsquo;appelles ? (коман тю тапель) – Как тебя зовут?</p>
+<p>6 - Je m&rsquo;appelle El&rsquo;ham (жё мапель Ильхам) – Меня зовут Ильхам</p>
 </div>
     </div>
    </div>
