--- a/public/frasi_italiano/index.html
+++ b/public/frasi_italiano/index.html
@@ -47,6 +47,11 @@
 
         <div><h3 id="frasi-in-italiano">Frasi in italiano</h3>
 <p>Una lista di frasi nuove per me in italiano con traduzione, che aggiungo ogni giorno</p>
+<p>1 - Come sta? (Комэ ста?) - как дела?</p>
+<p>2 - Come si sente?&quot; Комэ си сэнтэ? - Как настроение?</p>
+<p>3 - Così così (Кози кози) — Так себе</p>
+<p>4 - Sono felice&quot; (Соно фэличэ) - Я счастлив</p>
+<p>5 - Che umore hai? (Кэ уморе ай?) — Какое у тебя настроение?</p>
 </div>
     </div>
    </div>
