--- a/public/parole_italiano/index.html
+++ b/public/parole_italiano/index.html
@@ -47,6 +47,28 @@
 
         <div><h3 id="parole-in-italiano">Parole in italiano</h3>
 <p>Una lista di parole nuove per me in italiano con traduzione, che aggiungo ogni giorno</p>
+<p>1 - Buongiorno (Буонджорно) - Добрый день</p>
+<p>2 - Grazie (Грациэ) - Спасибо</p>
+<p>3 - Prego (Прэго) - Пожалуйста</p>
+<p>4 - Scusi (Скузи) - Извините</p>
+<p>5 - Bene (Бэнэ) - Хорошо</p>
+<h3 id="frutta">Frutta</h3>
+<p>1 - Mela (Мэла) — Яблоко 🍎</p>
+<p>2 - Banana (Бананa) — Банан 🍌</p>
+<p>3 - Arancia (Аранча) — Апельсин 🍊</p>
+<p>4 - Fragola (Фрагола) — Клубника 🍓</p>
+<p>5 - Pera (Пэра) — Груша 🍐</p>
+<h3 id="numeri">Numeri</h3>
+<p>1 - Uno (Уно)</p>
+<p>2 - Due (Дуэ)</p>
+<p>3 - Tre (Трэ)</p>
+<p>4 - Quattro (Куаттро)</p>
+<p>5 - Cinque (Чинкуэ)</p>
+<p>6 - Sei (Сэй)</p>
+<p>7 - Sette (Сэттэ)</p>
+<p>8 - Otto (Отто)</p>
+<p>9 - Nove (Новэ)</p>
+<p>10 - Dieci (Дьечи)</p>
 </div>
     </div>
    </div>
