--- a/public/phrasen_deutsch/index.html
+++ b/public/phrasen_deutsch/index.html
@@ -47,6 +47,11 @@
 
         <div><h3 id="phrasen-auf-deutsch">Phrasen auf Deutsch</h3>
 <p>Liste der für mich neuen Sätze auf Deutsch mit Übersetzung, die ich jeden Tag hinzufüge</p>
+<p>1 - Wie geht es dir? (ви гейт эс дир) — Как дела?</p>
+<p>2 - Mir geht es gut (мир гейт эс гут) - У меня всё хорошо</p>
+<p>3 - Wie heißt du? (ви хайст ду?) — Как тебя зовут?</p>
+<p>4 - Ich heiße El&rsquo;ham (их хайсэ Ильхам) — Меня зовут Ильхам</p>
+<p>5 - Wie ist deine Laune? (ви ист да́йнэ ла́унэ) — Какое у тебя настроение?</p>
 </div>
     </div>
    </div>
