--- a/public/worten_deutsch/index.html
+++ b/public/worten_deutsch/index.html
@@ -47,6 +47,28 @@
 
         <div><h3 id="wörter-auf-deutsch">Wörter auf Deutsch</h3>
 <p>Eine Liste mit für mich neuen Wörtern auf Deutsch mit Übersetzung, die ich jeden Tag hinzufüge</p>
+<p>1 - Guten Tag! (гу́тэн так) — Добрый день!</p>
+<p>2 - Danke! (да́нкэ) - Спасибо</p>
+<p>3 - Bitte! (би́тэ) — Пожалуйста</p>
+<p>4 - Entschuldigung! (энтшу́льдигунг) — Извините</p>
+<p>5 - Gut! (гут) — Хорошо!</p>
+<h3 id="früchte">Früchte</h3>
+<p>1 - Apfel (апфель) — яблоко 🍎</p>
+<p>2 - Banane (бана́нэ) — банан 🍌</p>
+<p>3 - Pfirsich (пфи́рзих) — персик 🍑</p>
+<p>4 - Orange (ора́нжэ) — апельсин 🍊</p>
+<p>5 - Traube (тра́убэ) — виноград 🍇</p>
+<h3 id="zahlen">Zahlen</h3>
+<p>1 - Eins (айнс)</p>
+<p>2 - Zwei (цвай)</p>
+<p>3 - Drei (драй)</p>
+<p>4 - Vier (фир)</p>
+<p>5 - Fünf (фюнф)</p>
+<p>6 - Sechs (зэкс)</p>
+<p>7 - Sieben (зибен)</p>
+<p>8 - Acht (ахт)</p>
+<p>9 - Neun (нойн)</p>
+<p>10 - Zehn (цейн)</p>
 </div>
     </div>
    </div>
