--- a/public/english_phrases/index.html
+++ b/public/english_phrases/index.html
@@ -47,6 +47,11 @@
 
         <div><h3 id="phrases-in-english">Phrases in English</h3>
 <p>List of new phrases for me in English with translation, which I add to every day</p>
+<p>1 - Hey there - переводится как &ldquo;Привет&rdquo; или &ldquo;Эй, привет&rdquo;.</p>
+<p>2 - How are you doing? - переводится как &ldquo;Как дела?&rdquo; или &ldquo;Как ты?&rdquo;.</p>
+<p>3 - How&rsquo;s it going? - переводится как &ldquo;Как дела?&rdquo;.</p>
+<p>4 - It&rsquo;s going well! - переводится как &ldquo;Всё отлично!&rdquo;.</p>
+<p>5 - Everything&rsquo;s fine - переводится как &ldquo;Всё в порядке&rdquo; или &ldquo;Всё хорошо&rdquo;.</p>
 </div>
     </div>
    </div>
