--- a/public/kelimeler_turkey/index.html
+++ b/public/kelimeler_turkey/index.html
@@ -47,6 +47,29 @@
 
         <div><h3 id="türkçe-kelimeler">Türkçe kelimeler</h3>
 <p>Her gün eklediğim çeviri ile Türkiye&rsquo;de benim için yeni kelimelerin listesi</p>
+<p>1 - Merhaba (Мерхаба) - Привет</p>
+<p>2 - Selam (Сэлям) - Привет</p>
+<p>3 - Teşekkür ederim (Тешеккюр эдерим) - Спасибо</p>
+<p>4 - Sağ ol (Са ол) - Спасибо</p>
+<p>5 - Özür dilerim (Озюр дилерим) - Извините</p>
+<p>6 - Affedersiniz&quot; (Аффедерсиниз) - Извините</p>
+<h3 id="meyve">Meyve</h3>
+<p>1 - Elma (Эльма) — яблоко 🍎</p>
+<p>2 - Muz (Муз) — банан 🍌</p>
+<p>3 - Çilek (Чилек) — клубника 🍓</p>
+<p>4 - Portakal (Портакал) — апельсин 🍊</p>
+<p>5 - Üzüm (Узюм) — виноград 🍇</p>
+<h3 id="sayılar">Sayılar</h3>
+<p>1 - Bir (Бир)</p>
+<p>2 - İki (Ики)</p>
+<p>3 - Üç (Уч)</p>
+<p>4 - Dört (Дёрт)</p>
+<p>5 - Beş (Беш)</p>
+<p>6 - Altı (Алты)</p>
+<p>7 - Yedi (Йеди)</p>
+<p>8 - Sekiz (Секиз)</p>
+<p>9 - Dokuz (Докуз)</p>
+<p>10 - On (Он)</p>
 </div>
     </div>
    </div>
