Пройдены уроки по иностранным языкам

--- a/public/cumleler_turkey/index.html
+++ b/public/cumleler_turkey/index.html
@@ -52,6 +52,17 @@
 <p>3 - Benim adım El&rsquo;ham. (Беним адым Ильхам) — Меня зовут Ильхам</p>
 <p>4 - Nasıl hissediyorsunuz? (Насыл хисседиёрсунуз?) - Как настроение?</p>
 <p>5 - Harika! (Харика!) — &ldquo;Отлично!</p>
+<p>6 - Ne yapıyorsun? (Не япыйорсун?) — Что ты делаешь?</p>
+<p>7 - Nerede yaşıyorsun? (Нереде яшыйорсун?) — Где ты живешь?</p>
+<p>8 - Anlamıyorum. (Анламыорум) — Я не понимаю.</p>
+<p>9 - Biraz Türkçe biliyorum. (Бираз Тюркче билийорум) — Я немного знаю турецкий.</p>
+<p>10 - Yardım eder misiniz? (Ярдым эдер миссиниз?) — Поможете мне?</p>
+<p>11 - Ne kadar? (Не кадар?) — Сколько стоит?</p>
+<p>12 - Açım. (Ачым) — Я голоден/голодна.</p>
+<p>13 - Susadım. (Сусадым) — Я хочу пить.</p>
+<p>14 - Görüşürüz! (Гёрюшюрюз!) — Увидимся!</p>
+<p>15 - Bu ne demek? (Бу не демек?) — Что это значит?</p>
+<p>16 - Seni seviyorum (Сени севиёрум) - Я тебя люблю</p>
 </div>
     </div>
    </div>
