--- a/public/english_phrases/index.html
+++ b/public/english_phrases/index.html
@@ -52,6 +52,16 @@
 <p>3 - How&rsquo;s it going? - переводится как &ldquo;Как дела?&rdquo;.</p>
 <p>4 - It&rsquo;s going well! - переводится как &ldquo;Всё отлично!&rdquo;.</p>
 <p>5 - Everything&rsquo;s fine - переводится как &ldquo;Всё в порядке&rdquo; или &ldquo;Всё хорошо&rdquo;.</p>
+<p>6 - What’s up? - переводится как &ldquo;Как дела?&rdquo; или &ldquo;Что нового?&rdquo;</p>
+<p>7 - Nice to meet you! - переводится как &ldquo;Приятно познакомиться!&rdquo;</p>
+<p>8 - See you later! - переводится как &ldquo;Увидимся позже!&rdquo;</p>
+<p>9 - Have a good day! - переводится как &ldquo;Хорошего дня!&rdquo;</p>
+<p>10 - I don’t understand - переводится как &ldquo;Я не понимаю&rdquo;</p>
+<p>11 - Can you help me? - переводится как &ldquo;Ты можешь мне помочь?&rdquo;</p>
+<p>12 - What do you think? - переводится как &ldquo;Что ты думаешь?&rdquo;</p>
+<p>13 - I’m sorry, I’m late - переводится как &ldquo;Извините, я опоздал(а)&rdquo;</p>
+<p>14 - No problem! - переводится как &ldquo;Нет проблем!&rdquo;</p>
+<p>15 - Let’s go! - переводится как &ldquo;Поехали!&rdquo; или &ldquo;Давай!&rdquo;</p>
 </div>
     </div>
    </div>
