--- a/public/english_words/index.html
+++ b/public/english_words/index.html
@@ -50,13 +50,35 @@
 <p>1 - Hello! - Привет! [ Хэллоу ]</p>
 <p>2 - Hi - Привет! [ Хай ]</p>
 <p>3 - Hey - Привет! [ Хей ]</p>
+<p>4 - Goodbye - Пока! [ Гудбай ]</p>
+<p>5 - Yes - Да [ Йес ]</p>
+<p>6 - No - Нет [ Ноу ]</p>
+<p>7 - Please - Пожалуйста [ Плиз ]</p>
+<p>8 - Thank you - Спасибо [ Сэнк ю ]</p>
+<p>9 - Sorry - Извини [ Сорри ]</p>
+<p>10 - Okay - Хорошо [ Окей ]</p>
 <h3 id="fruits">Fruits</h3>
 <p>1 - Banana - Банан 🍌</p>
 <p>2 - Orange - Апельсин 🍊</p>
 <p>3 - Apple - Яблоко 🍎</p>
 <p>4 - Cucumber - Огурец 🥒</p>
 <p>5 - Сarrot - Марковка 🥕</p>
+<p>6 - Tomato - Помидор 🍅</p>
+<p>7 - Potato - Картофель 🥔</p>
+<p>8 - Strawberry - Клубника 🍓</p>
+<p>9 - Grapes - Виноград 🍇</p>
+<p>10 - Lemon - Лимон 🍋</p>
 <h3 id="colors">Colors</h3>
+<p>1 - Red - Красный [ Рэд ]</p>
+<p>2 - Blue - Синий [ Блу ]</p>
+<p>3 - Green - Зеленый [ Грин ]</p>
+<p>4 - Yellow - Желтый [ Йелоу ]</p>
+<p>5 - Black - Черный [ Блэк ]</p>
+<p>6 - White - Белый [ Уайт ]</p>
+<p>7 - Pink - Розовый [ Пинк ]</p>
+<p>8 - Purple - Фиолетовый [ Пёрпл ]</p>
+<p>9 - Orange - Оранжевый [ Орандж ]</p>
+<p>10 - Brown - Коричневый [ Браун ]</p>
 <h3 id="numbers">Numbers</h3>
 <p>1 - One – [wʌn]</p>
 <p>2 - Two – [tuː]</p>
