--- a/public/espanol_frases/index.html
+++ b/public/espanol_frases/index.html
@@ -53,6 +53,15 @@
 <p>4 - ¡Buenos días! (Буэнос диас!) - Доброе утро</p>
 <p>5 - ¿Cómo te sientes? (Комо те сьентес?) - Как ты себя чувствуешь?</p>
 <p>6 - ¿Cómo te va? (Комо те ва?) - Как поживаешь?</p>
+<p>7 - ¿Qué tal? (Ке таль?) — Как дела? / Как оно?</p>
+<p>8 - Estoy bien (Эстой бьен) — У меня всё хорошо</p>
+<p>9 - Estoy mal (Эстой маль) — У меня всё плохо</p>
+<p>10 - ¿Qué haces? (Ке асес?) — Что делаешь?</p>
+<p>11 - ¿Qué pasa? (Ке паса?) — Что происходит?</p>
+<p>12 - No lo sé (Но ло се) — Я не знаю</p>
+<p>13 - Claro (Кларо) — Конечно / Ясно</p>
+<p>14 - No entiendo (Но энтьендо) — Я не понимаю</p>
+<p>15 - Habla más despacio (Абла мас деспасьо) — Говори медленнее</p>
 </div>
     </div>
    </div>
