--- a/public/espanol_palabras/index.html
+++ b/public/espanol_palabras/index.html
@@ -52,12 +52,38 @@
 <p>3 - ¡Por favor! (Пор фавор!) - Пожалуйста</p>
 <p>4 - De nada (Де нада) - Не за что</p>
 <p>5 - No es nada (Но эс нада) — Это пустяки</p>
+<p>6 - Sí (Си) — Да</p>
+<p>7 - No (Но) — Нет</p>
+<p>8 - Bueno (Буэно) — Хорошо</p>
+<p>9 - Mal (Маль) — Плохо</p>
+<p>10 - ¿Qué? (Ке?) — Что?</p>
+<p>11 - ¿Cómo? (Комо?) — Как?</p>
+<p>12 - ¿Dónde? (Донде?) — Где?</p>
+<p>13 - ¿Cuándo? (Куандо?) — Когда?</p>
+<p>14 - ¿Por qué? (Пор ке?) — Почему?</p>
+<p>15 - ¿Quién? (Кьен?) — Кто?</p>
+<h3 id="colores">Colores</h3>
+<p>1 - Blanco (Бланко) — Белый</p>
+<p>2 - Gris (Грис) — Серый</p>
+<p>3 - Negro (Негро) — Черный</p>
+<p>4 - Rojo (Рохо) — Красный</p>
+<p>5 - Azul (Азуль) — Синий</p>
+<p>6 - Verde (Верде) — Зеленый</p>
+<p>7 - Amarillo (Амарильо) — Желтый</p>
+<p>8 - Naranja (Наранха) — Оранжевый</p>
+<p>9 - Rosa (Роса) — Розовый</p>
+<p>10 - Morado (Морадо) — Фиолетовый</p>
 <h3 id="frutas">Frutas</h3>
 <p>1 - Manzana (Мансана) — Яблоко 🍎</p>
 <p>2 - Plátano (Платано) — Банан 🍌</p>
 <p>3 - Naranja (Наранха) — Апельсин 🍊</p>
 <p>4 - Fresa (Фреса) — Клубника 🍓</p>
 <p>5 - Uva (Ува) — Виноград 🍇</p>
+<p>6 - Piña (Пиня) — Ананас 🍍</p>
+<p>7 - Mango (Манго) — Манго 🥭</p>
+<p>8 - Sandía (Сандия) — Арбуз 🍉</p>
+<p>9 - Melón (Мелон) — Дыня 🍈</p>
+<p>10 - Pera (Пера) — Груша 🍐</p>
 <h3 id="números">Números</h3>
 <p>1 - Uno (Уно)</p>
 <p>2 - Dos (Дос)</p>
