--- a/public/france_mots/index.html
+++ b/public/france_mots/index.html
@@ -52,23 +52,53 @@
 <p>3 - Merci (мерси) – Спасибо!</p>
 <p>4 - S&rsquo;il vous plaît (силь ву плэ) – Пожалуйста</p>
 <p>5 - De rien (дё рьен) – Не за что</p>
+<p>6 - Oui (уи) – Да</p>
+<p>7 - Non (нон) – Нет</p>
+<p>8 - Excusez-moi (экскюзе-муа) – Извините</p>
+<p>9 - Pardon (пардон) – Простите</p>
+<p>10 - Comment ça va ? (коман са ва) – Как дела?</p>
+<p>11 - Ça va bien (са ва бьен) – Всё хорошо</p>
+<p>12 - Au revoir (о рёвуар) – До свидания</p>
+<p>13 - Bonne journée (бон журнэ) – Хорошего дня</p>
+<p>14 - Je t&rsquo;aime (жё тэм) – Я тебя люблю</p>
+<p>15 - Bienvenue (бьенвёню) – Добро пожаловать</p>
 <h3 id="fruits">Fruits</h3>
 <p>1 - Pomme (пом) – Яблоко 🍎</p>
 <p>2 - Banane (банан) – Банан 🍌</p>
 <p>3 - Orange (оранж) – Апельсин 🍊</p>
 <p>4 - Fraise (фрэз) – Клубника 🍓</p>
 <p>5 - Raisin (резэн) – Виноград 🍇</p>
+<p>6 -Citron (ситрон) – Лимон 🍋</p>
+<p>7 - Poire (пуар) – Груша 🍐</p>
+<p>8 - Pêche (пеш) – Персик 🍑</p>
+<p>9 - Ananas (ананас) – Ананас 🍍</p>
+<p>10 - Cerise (сериз) – Вишня 🍒</p>
+<p>11 - Kiwi (киви) – Киви 🥝</p>
+<p>12 - Mangue (манж) – Манго 🥭</p>
+<p>13 - Pastèque (пастэк) – Арбуз 🍉</p>
+<p>14 - Melon (мелон) – Дыня 🍈</p>
+<p>15 - Prune (прюн) – Слива 🟣</p>
 <h3 id="nombres">Nombres</h3>
-<p>1 - Un (ан)</p>
-<p>2 - Deux (дё)</p>
-<p>3 - Trois (труа)</p>
-<p>4 - Quatre (катр)</p>
-<p>5 - Cinq (сэнк)</p>
-<p>6 - Six (сис)</p>
-<p>7 - Sept (сет)</p>
-<p>8 - Huit (юит)</p>
-<p>9 - Neuf (нёф)</p>
-<p>10 - Dix (дис)</p>
+<p>1 - Un (ан) – Один</p>
+<p>2 - Deux (дё) – Два</p>
+<p>3 - Trois (труа) – Три</p>
+<p>4 - Quatre (катр) – Четыре</p>
+<p>5 - Cinq (сэнк) – Пять</p>
+<p>6 - Six (сис) – Шесть</p>
+<p>7 - Sept (сет) – Семь</p>
+<p>8 - Huit (юит) – Восемь</p>
+<p>9 - Neuf (нёф) – Девять</p>
+<p>10 - Dix (дис) – Десять</p>
+<p>11 - Onze (онз) – Одиннадцать</p>
+<p>12 - Douze (дуз) – Двенадцать</p>
+<p>13 - Treize (трэз) – Тринадцать</p>
+<p>14 - Quatorze (каторз) – Четырнадцать</p>
+<p>15 - Quinze (кэнз) – Пятнадцать</p>
+<p>16 - Seize (сэз) – Шестнадцать</p>
+<p>17 - Dix-sept (дис-сет) – Семнадцать</p>
+<p>18 - Dix-huit (дис-юит) – Восемнадцать</p>
+<p>19 - Dix-neuf (дис-нёф) – Девятнадцать</p>
+<p>20 - Vingt (ван) – Двадцать</p>
 </div>
     </div>
    </div>
