--- a/public/france_phrases/index.html
+++ b/public/france_phrases/index.html
@@ -53,6 +53,15 @@
 <p>4 - Comme ci, comme ça (ком си, ком са) – Так себе</p>
 <p>5 - Comment tu t&rsquo;appelles ? (коман тю тапель) – Как тебя зовут?</p>
 <p>6 - Je m&rsquo;appelle El&rsquo;ham (жё мапель Ильхам) – Меня зовут Ильхам</p>
+<p>7 - Où habites-tu ? (у абит-тю) – Где ты живешь?</p>
+<p>8 - J&rsquo;habite à&hellip; (жабит а&hellip;) – Я живу в&hellip;</p>
+<p>9 - Quel âge as-tu ? (кель аж а-тю) – Сколько тебе лет?</p>
+<p>10 - J&rsquo;ai &hellip; ans (жэ &hellip; ан) – Мне &hellip; лет.</p>
+<p>11 - Qu&rsquo;est-ce que tu fais ? (кес кё тю фэ) – Что ты делаешь?</p>
+<p>12 - Je travaille (жё травай) – Я работаю.</p>
+<p>13 - Je suis étudiant(e) (жё сюиз этюдьян/этюдьянт) – Я студент/студентка.</p>
+<p>14 - Je vais bien (жё вэ бьен) – У меня всё хорошо.</p>
+<p>15 - À bientôt ! (а бьенто) – До скорого!</p>
 </div>
     </div>
    </div>
