--- a/public/frasi_italiano/index.html
+++ b/public/frasi_italiano/index.html
@@ -52,6 +52,11 @@
 <p>3 - Così così (Кози кози) — Так себе</p>
 <p>4 - Sono felice&quot; (Соно фэличэ) - Я счастлив</p>
 <p>5 - Che umore hai? (Кэ уморе ай?) — Какое у тебя настроение?</p>
+<p>6 - Sono triste (Соно тристэ) — Мне грустно</p>
+<p>7 - Che cosa fai? (Кэ коза фай?) — Что ты делаешь?</p>
+<p>8 - Dove vai? (Довэ вай?) — Куда ты идёшь?</p>
+<p>9 - Ho fame (О фаме) — Я голоден/голодна</p>
+<p>10 - Ho sete (О сэтэ) — Я хочу пить</p>
 </div>
     </div>
    </div>
