--- a/public/kelimeler_turkey/index.html
+++ b/public/kelimeler_turkey/index.html
@@ -53,12 +53,21 @@
 <p>4 - Sağ ol (Са ол) - Спасибо</p>
 <p>5 - Özür dilerim (Озюр дилерим) - Извините</p>
 <p>6 - Affedersiniz&quot; (Аффедерсиниз) - Извините</p>
+<p>7 - Evet (Эвет) — Да</p>
+<p>8 - Hayır (Хайыр) — Нет</p>
+<p>9 - Lütfen (Лютфен) — Пожалуйста</p>
+<p>10 - Güle güle (Гюле гюле) — До свидания</p>
 <h3 id="meyve">Meyve</h3>
 <p>1 - Elma (Эльма) — яблоко 🍎</p>
 <p>2 - Muz (Муз) — банан 🍌</p>
 <p>3 - Çilek (Чилек) — клубника 🍓</p>
 <p>4 - Portakal (Портакал) — апельсин 🍊</p>
 <p>5 - Üzüm (Узюм) — виноград 🍇</p>
+<p>6 - Armut (Армут) — груша 🍐</p>
+<p>7 - Karpuz (Карпуз) — арбуз 🍉</p>
+<p>8 - Kavun (Кавун) — дыня 🍈</p>
+<p>9 - Şeftali (Шефтали) — персик 🍑</p>
+<p>10 - Ananas (Ананас) — ананас 🍍</p>
 <h3 id="sayılar">Sayılar</h3>
 <p>1 - Bir (Бир)</p>
 <p>2 - İki (Ики)</p>
