--- a/public/parole_italiano/index.html
+++ b/public/parole_italiano/index.html
@@ -52,12 +52,27 @@
 <p>3 - Prego (Прэго) - Пожалуйста</p>
 <p>4 - Scusi (Скузи) - Извините</p>
 <p>5 - Bene (Бэнэ) - Хорошо</p>
+<p>6 - Ciao (Чао) — Привет/Пока</p>
+<p>7 - Arrivederci (Арриведэрчи) — До свидания</p>
+<p>8 - Per favore (Пер фаворэ) — Пожалуйста (в значении просьбы)</p>
+<p>9 - Sì (Си) — Да</p>
+<p>10 - No (Но) — Нет</p>
+<p>11 - Mi scusi (Ми скузи) — Извините (более вежливо)</p>
+<p>12 - Come stai? (Комэ стай?) — Как дела?</p>
+<p>13 - Molto bene (Мольто бэнэ) — Очень хорошо</p>
+<p>14 - Non capisco (Нон каписко) — Я не понимаю</p>
+<p>15 - Quanto costa? (Куанто коста?) — Сколько это стоит?</p>
 <h3 id="frutta">Frutta</h3>
 <p>1 - Mela (Мэла) — Яблоко 🍎</p>
 <p>2 - Banana (Бананa) — Банан 🍌</p>
 <p>3 - Arancia (Аранча) — Апельсин 🍊</p>
 <p>4 - Fragola (Фрагола) — Клубника 🍓</p>
 <p>5 - Pera (Пэра) — Груша 🍐</p>
+<p>6 - Pesca (Пэска) — Персик 🍑</p>
+<p>7 - Ananas (Ананас) — Ананас 🍍</p>
+<p>8 - Uva (Ува) — Виноград 🍇</p>
+<p>9 - Kiwi (Киви) — Киви 🥝</p>
+<p>10 - Limone (Лимонэ) — Лимон 🍋</p>
 <h3 id="numeri">Numeri</h3>
 <p>1 - Uno (Уно)</p>
 <p>2 - Due (Дуэ)</p>
