--- a/public/python/index.html
+++ b/public/python/index.html
@@ -44,11 +44,11 @@
 
 <div class="list">
   
-  <h3>January 0001</h3> 
+  <h3>January 2025</h3> 
   <ul>
       
           <li>
-              <time class="gray">01</time> <a href="/type_of_data_python/">Основные типы данных Python</a>
+              <time class="gray">09</time> <a href="/type_of_data_python/">Основные типы данных в Python</a>
           </li>
       
   </ul>
