Правки на странице обо мне

--- a/public/me/index.html
+++ b/public/me/index.html
@@ -110,7 +110,7 @@ Vim</a>
 <li class="mb0.5">
 <a href="https://rs.school" target="_blank">
 RS School</a>
-&rsaquo; Начало курса по Frontend разработке "JavaScript + React"
+&rsaquo; Online education on "JavaScript + React" course
 </li>
 </ul>
 <h4 class="mt2">February 2022</h4>
@@ -125,8 +125,10 @@ HTMLAcademy</a>
 <ul>
 <li class="mb0.5">
 <a href="https://synergy.ru" target="_blank">
-МФПУ Синергия</a>
-&rsaquo; Начало учебы в Университете на факультете Кибербезопасности
+Synergy University</a>
+&rsaquo; Start my bachelor's degree in "Information system and 
+technology, Development, maintenance and support or 
+the information system security"
 </li>
 </ul>
 <h4 class="mt2">October 2021</h4>
