Незначительные изминения на странице обо мне

--- a/public/me/index.html
+++ b/public/me/index.html
@@ -95,7 +95,7 @@ MarkDown</a>
 <img class="logos" src="/images/VSCode-Dark.svg" width="22px" height="22px" />
 <a href="https://code.visualstudio.com/" target="_blank"> 
 VSCode</a>
-&rsaquo; IDE от MicroSoft
+&rsaquo; IDE от Microsoft
 </p>
 <p>
 <img class="logos" src="/images/Vimlogo.png" width="22px" height="22px" />
@@ -127,8 +127,8 @@ HTMLAcademy</a>
 <a href="https://synergy.ru" target="_blank">
 Synergy University</a>
 &rsaquo; Start my bachelor's degree in "Information system and 
-technology, Development, maintenance and support or 
-the information system security"
+technology, Development, Maintenance and support, 
+The information system security"
 </li>
 </ul>
 <h4 class="mt2">October 2021</h4>
