Отредактирована страница обо мне

--- a/public/links/index.html
+++ b/public/links/index.html
@@ -50,25 +50,12 @@
     links
 </h2>
 <p>
-Ссылки на мои профили, дополнительные разделы блога и 
+Ссылки на дополнительные разделы блога и 
 полезные ресурсы.
-</p>
-<h3 class="mt2" style="padding-top: 20px;">profiles</h3>
-<p>
-Ссылки на профили
-</p>
-<p>
-<img class="logos" src="/images/Github-Dark.svg" width="22px" height="22px" /> <a href="https://github.com/dkd3v" target="_blank">Github</a> &rsaquo; Исходники 😊
-</p>
-<p>
-<img class="logos" src="/images/Codewars.svg" width="22px" height="22px" /> <a href="https://www.codewars.com/users/dxrkd3v" target="_blank">Codewars</a> &rsaquo; 7 kyu 😅
-</p>
-<p>
-<img class="logos" src="/images/htmlacademy.png" width="22px" height="22px" /> <a href="https://htmlacademy.ru/profile/dxrkd3v" target="_blank">HTMLAcademy</a> &rsaquo; 400+ Задач
 </p>
 <h3 class="mt2" style="padding-top: 20px;">articles</h3>
 <p>
-Лекции из Университета
+Лекции из Университетов
 </p>
 <p>
 <a href="/english/">English</a> &rsaquo; Лекции по английскому языку
@@ -79,30 +66,6 @@
 <p>
 <a href="/tis/">TIS</a> &rsaquo; Лекции по теории информационных
 систем
-</p>
-<h3 class="mt2" style="padding-top: 20px;">langs</h3>
-<p>
-Записи слов и фраз на иностранных языках для
-эффективного усвоения и закрепления в памяти
-</p>
-<p>
-🇬🇧 <a href="/english_words/">Words</a> and <a href="/english_phrases/">
-Phrases</a> in English &rsaquo; Слова и фразы на английском языке
-</p>
-<p>
-🇪🇸 <a href="/espanol_palabras/">Palabras</a> y esas <a href="/espanol_frases/">Frases</a> en Español &rsaquo; Слова и фразы на испанском языке
-</p>
-<p>
-🇮🇹 <a href="/parole_italiano/">Parole</a> e <a href="/frasi_italiano/">Frasi</a> in Italiano &rsaquo; Слова и фразы на итальянском языке
-</p>
-<p>
-🇫🇷 <a href="/france_mots/">Mots</a> et <a href="/france_phrases/">Phrases</a> sur Français &rsaquo; Слова и фразы на французском языке
-</p>
-<p>
-🇩🇪 <a href="/worten_deutsch/">Wörter</a> und <a href="/phrasen_deutsch/">Phrasen</a> auf Deutsch &rsaquo; Слова и фразы на немецком языке
-</p>
-<p>
-🇹🇷 <a href="/kelimeler_turkey/">Kelimeler</a> ve <a href="/cumleler_turkey/">Сümleler</a> Türkçe dilinde &rsaquo; Слова и фразы на турецком языке
 </p>
 <h3 class="mt2" style="padding-top: 20px;">links</h3>
 <p>
@@ -130,13 +93,37 @@ Phrases</a> in English &rsaquo; Слова и фразы на английско
 <a href="https://cssgridgarden.com" target="_blank">GridGarden</a> &rsaquo; Тренажер по Гридам
 </p>
 <p>
-<a href="https://flexboxfroggy.com/" target="_blank">FlexboxFroggy</a> &rsaquo; Треножер по Флексам
+<a href="https://flexboxfroggy.com/" target="_blank">FlexboxFroggy</a> &rsaquo; Тренажер по Флексам
 </p>
 <p>
 <a href="https://learngitbranching.js.org" target="_blank">LearninGit</a> &rsaquo; Тренажер по Гиту
 </p>
 <p>
 <a href="https://typerun.top" target="_blank">TypeRun</a> &rsaquo; Тренажер слепой печати
+</p>
+<h3 class="mt2" style="padding-top: 20px;">langs</h3>
+<p>
+Записи слов и фраз на иностранных языках для
+эффективного закрепления в памяти
+</p>
+<p>
+🇬🇧 <a href="/english_words/">Words</a> and <a href="/english_phrases/">
+Phrases</a> in English &rsaquo; Слова и фразы на английском языке
+</p>
+<p>
+🇪🇸 <a href="/espanol_palabras/">Palabras</a> y esas <a href="/espanol_frases/">Frases</a> en Español &rsaquo; Слова и фразы на испанском языке
+</p>
+<p>
+🇮🇹 <a href="/parole_italiano/">Parole</a> e <a href="/frasi_italiano/">Frasi</a> in Italiano &rsaquo; Слова и фразы на итальянском языке
+</p>
+<p>
+🇫🇷 <a href="/france_mots/">Mots</a> et <a href="/france_phrases/">Phrases</a> sur Français &rsaquo; Слова и фразы на французском языке
+</p>
+<p>
+🇩🇪 <a href="/worten_deutsch/">Wörter</a> und <a href="/phrasen_deutsch/">Phrasen</a> auf Deutsch &rsaquo; Слова и фразы на немецком языке
+</p>
+<p>
+🇹🇷 <a href="/kelimeler_turkey/">Kelimeler</a> ve <a href="/cumleler_turkey/">Сümleler</a> Türkçe dilinde &rsaquo; Слова и фразы на турецком языке
 </p>
 </div></div>
     </div>
