--- a/public/background_v_css_2/index.html
+++ b/public/background_v_css_2/index.html
@@ -167,7 +167,10 @@
     <a href="/links/" class="gray no-underline inline-block mx2 mt1 md:mt0">Links</a>
 </div>
 <div class="text-center">
-    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1 md:mt0">Text me</a>
+    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1"
+             style = "font-size: 18px;";>
+        Text me
+    </a>
 </div>
 <br />
 <br />
