Изменен размер мыла в подвале сайта

--- a/public/sposoby_isucheniya_informatsionnoy_systemy/index.html
+++ b/public/sposoby_isucheniya_informatsionnoy_systemy/index.html
@@ -118,6 +118,12 @@
     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">About</a>
     <a href="/links/" class="gray no-underline inline-block mx2 mt1 md:mt0">Links</a>
 </div>
+<div class="text-center">
+    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1"
+             style = "font-size: 18px;";>
+        Text me
+    </a>
+</div>
 <br />
 <br />
  
