--- a/public/map_v_javascript/index.html
+++ b/public/map_v_javascript/index.html
@@ -156,6 +156,12 @@ console.log( visitsCountObj["[object Object]"] ); // 123</code></pre>
     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">About</a>
     <a href="/links/" class="gray no-underline inline-block mx2 mt1 md:mt0">Links</a>
 </div>
+<div class="text-center">
+    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1"
+             style = "font-size: 18px;";>
+        Text me
+    </a>
+</div>
 <br />
 <br />
  
