--- a/public/tipy_snacheniy_v_css/index.html
+++ b/public/tipy_snacheniy_v_css/index.html
@@ -238,6 +238,12 @@ linear-gradient(45deg, yellow, green);</code></pre>
     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">About</a>
     <a href="/links/" class="gray no-underline inline-block mx2 mt1 md:mt0">Links</a>
 </div>
+<div class="text-center">
+    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1"
+             style = "font-size: 18px;";>
+        Text me
+    </a>
+</div>
 <br />
 <br />
  
