Внесены изминения на странице с линками и обо мне

--- a/public/pseudo_array_javascript/index.html
+++ b/public/pseudo_array_javascript/index.html
@@ -62,26 +62,20 @@
 </span></span></span><span class="line"><span class="cl"><span class="c1"></span><span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">arr</span><span class="p">);</span> <span class="c1">// Выведет: [1, 2, 3, 4, 5, 6]
 </span></span></span></code></pre></div><p>Особенности массивов:</p>
 <blockquote>
-<p>Элементы массива индексируются (начинаются с 0)</p>
-</blockquote>
+<p>Элементы массива индексируются (начинаются с 0)</p></blockquote>
 <blockquote>
-<p>Массивы динамические: их длина может изменяться</p>
-</blockquote>
+<p>Массивы динамические: их длина может изменяться</p></blockquote>
 <blockquote>
-<p>Поддерживают методы для работы с коллекциями: <code>push</code>, <code>pop</code>, <code>map</code>, <code>filter</code>, <code>reduce</code> и т.д.</p>
-</blockquote>
+<p>Поддерживают методы для работы с коллекциями: <code>push</code>, <code>pop</code>, <code>map</code>, <code>filter</code>, <code>reduce</code> и т.д.</p></blockquote>
 <h4 id="псевдомассивы">Псевдомассивы</h4>
 <p>Псевдомассивы — это объекты, которые выглядят как массивы, но не являются массивами. Они имеют числовые индексы и свойство length, но не поддерживают методы массивов.</p>
 <p>Особенности псевдомассивов:</p>
 <blockquote>
-<p>Имеют числовые индексы (например, 0, 1, 2)</p>
-</blockquote>
+<p>Имеют числовые индексы (например, 0, 1, 2)</p></blockquote>
 <blockquote>
-<p>Имеют свойство <code>length</code>, которое указывает количество элементов.</p>
-</blockquote>
+<p>Имеют свойство <code>length</code>, которое указывает количество элементов.</p></blockquote>
 <blockquote>
-<p>Не поддерживают методы массивов (<code>push</code>, <code>pop</code>, <code>map</code> и т.д.).</p>
-</blockquote>
+<p>Не поддерживают методы массивов (<code>push</code>, <code>pop</code>, <code>map</code> и т.д.).</p></blockquote>
 </div>
     </div>
    </div>
