--- a/public/tipy_udarnogo_sloga/index.html
+++ b/public/tipy_udarnogo_sloga/index.html
@@ -58,20 +58,16 @@
 ударная гласная отделена от немого е двумя согласными</p>
 <p>В открытом типе слога гласные произносятся:</p>
 <blockquote>
-<p>длительнее всего в односложных словах, если за ними не следуют согласные: my [m ai], mе [mi :];</p>
-</blockquote>
+<p>длительнее всего в односложных словах, если за ними не следуют согласные: my [m ai], mе [mi :];</p></blockquote>
 <blockquote>
-<p>более длительно перед сонантами (1, m, n) и звонкими согласными, чем перед глухими согласными. Сравните: say [sei] – same[seim] – sake [seik].</p>
-</blockquote>
+<p>более длительно перед сонантами (1, m, n) и звонкими согласными, чем перед глухими согласными. Сравните: say [sei] – same[seim] – sake [seik].</p></blockquote>
 <h4 id="второй-закрытый-тип-слога">Второй (закрытый) тип слога.</h4>
 <p>Гласная буква в закрытом слоге читается кратко в
 следующих моментах:</p>
 <blockquote>
-<p>в односложных словах, оканчивающихся на одну или несколько согласных: ten [ten], tent [tent];</p>
-</blockquote>
+<p>в односложных словах, оканчивающихся на одну или несколько согласных: ten [ten], tent [tent];</p></blockquote>
 <blockquote>
-<p>если ударная гласная отделена от последующей гласной двумя или тремя согласными: middle [midl], kettle [ketl]</p>
-</blockquote>
+<p>если ударная гласная отделена от последующей гласной двумя или тремя согласными: middle [midl], kettle [ketl]</p></blockquote>
 <p>Нужно помнить что двойные согласные читаются как один звук.</p>
 <p>Глухие согласные [р,t,k] произносятся с придыханием в
 начале слов, если им не предшествует согласный s. Для сравнения: till – still.</p>
