--- a/public/typeof_javascript/index.html
+++ b/public/typeof_javascript/index.html
@@ -55,11 +55,9 @@
 форма на сайте.</p>
 <p>У <code>typeof()</code> существует два варианта синтаксиса:</p>
 <blockquote>
-<p>Синтаксис оператора <code>typeof x</code></p>
-</blockquote>
+<p>Синтаксис оператора <code>typeof x</code></p></blockquote>
 <blockquote>
-<p>Синтаксис функции <code>typeof(x)</code></p>
-</blockquote>
+<p>Синтаксис функции <code>typeof(x)</code></p></blockquote>
 <p>Оба синтаксиса работают одинаково.</p>
 <p><code>typeof()</code> возвращает строку, которая содержит
 тип данных.</p>
