После ребилда сайа

--- a/public/callback_function_javascript/index.html
+++ b/public/callback_function_javascript/index.html
@@ -95,10 +95,8 @@
     <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Home</a>
     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">About</a>
     <a href="/links/" class="gray no-underline inline-block mx2 mt1 md:mt0">Links</a>
-</div>
-<div class="text-center">
-    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1"
-             style = "font-size: 18px;";>
+    <br />
+    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2">
         Text me
     </a>
 </div>
