--- a/public/operators_in_javascript/index.html
+++ b/public/operators_in_javascript/index.html
@@ -89,7 +89,7 @@
 </span></span><span class="line"><span class="cl"><span class="kd">let</span> <span class="nx">y</span> <span class="o">=</span> <span class="nx">x</span><span class="o">++</span><span class="p">;</span> <span class="c1">// y получает значение x (5), затем x увеличивается на 1
 </span></span></span><span class="line"><span class="cl"><span class="c1"></span><span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">x</span><span class="p">);</span> <span class="c1">// 6
 </span></span></span><span class="line"><span class="cl"><span class="c1"></span><span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">y</span><span class="p">);</span> <span class="c1">// 5
-</span></span></span></code></pre></div><h4 id="декремент---">Декремент &ndash;</h4>
+</span></span></span></code></pre></div><h4 id="декремент-">Декремент &ndash;</h4>
 <p>Оператор декремента уменьшает значение переменной на 1.</p>
 <p>Префиксная форма (&ndash;x):</p>
 <blockquote>
