--- a/public/if_else_v_javascript/index.html
+++ b/public/if_else_v_javascript/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>if / else в JavaScript</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.7.0/remixicon.css">
     <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/tokyo-night-dark.min.css">
@@ -207,9 +208,14 @@ getTypeOfSentence('No!');  // Sentence is exclamation</code></pre>
 </div>
 <br />
 <br />
+
+<a href="#" class="scrollup" id="scroll-up">
+    <i class="ri-arrow-up-line"></i>
+ </a>
  
     </div>
     </div>
     </div>
+    <script src="/static/js/main.js"></script>
 </body>
 </html>
